// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-image> Component <bolt-image> with ratio object and lazyloading disabled compiles 1`] = `
"<bolt-image  style=\\"background-color: hsl(233, 33%, 97%);\\" >
              <img  class=\\"c-bolt-image__image-placeholder\\" alt=\\"A Rock Climber\\" sizes=\\"auto\\" src=\\"data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==\\" />

        <img  class=\\"c-bolt-image__image\\" alt=\\"A Rock Climber\\" srcset=\\"/pattern-lab/images/placeholders/tout-4x3-climber.jpg\\" sizes=\\"auto\\" src=\\"/pattern-lab/images/placeholders/tout-4x3-climber.jpg\\" />

      
      </bolt-image>"
`;

exports[`<bolt-image> Component <bolt-image> with ratio object compiles 1`] = `
"<bolt-image  style=\\"background-color: hsl(233, 33%, 97%);\\" >
              <img  class=\\"c-bolt-image__image-placeholder\\" alt=\\"A Rock Climber\\" src=\\"data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==\\" />

        <img  class=\\"c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload\\" alt=\\"A Rock Climber\\" data-srcset=\\"/pattern-lab/images/placeholders/tout-4x3-climber.jpg\\" data-sizes=\\"auto\\" src=\\"data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==\\" />

      
      </bolt-image>"
`;
